[package]
name = "getdown"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["serinuntius"]
description = "fast resume pararel downloader. instead of wget"
readme = "README.md"
homepage = "https://github.com/serinuntius/getdown"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
url = "2.2.2"

reqwest = { version = "0.11", features= ["stream"]}
tokio = { version = "1", features = ["full"] }
futures = "0.3.19"

once_cell = "1.11.0"

indicatif = "0.16.2"